# Q1_2026_Accel_Nishant

./: .gitignore  Readme.md  assignment.md
escrow-litesvm/: .gitignore  Anchor.toml
escrow-litesvm/programs/anchor-escrow/: Cargo.toml
escrow-litesvm/programs/anchor-escrow/src/: constants.rs  error.rs  lib.rs
escrow-litesvm/programs/anchor-escrow/src/instructions/: make.rs  refund.rs  take.rs
escrow-litesvm/programs/anchor-escrow/src/state/: escrow.rs
escrow-litesvm/programs/anchor-escrow/src/tests/: mod.rs  setup.rs
escrow-litesvm/programs/anchor-escrow/tests/: escrow.rs
pinocchio-escrow/: Cargo.toml
pinocchio-escrow/src/: lib.rs
pinocchio-escrow/src/state/: escrow.rs
rust-challenge/generic-storage/: Cargo.toml
rust-challenge/generic-storage/src/: lib.rs  main.rs
rust-challenge/persistent-todo-queue/: Cargo.toml
rust-challenge/persistent-todo-queue/src/: main.rs
tuktuk-counter/: config.toml
tuktuk-counter/tests/: tuktuk-counter.ts
tuktuk-gpt-oracle/: Anchor.toml  Cargo.toml  package.json
tuktuk-gpt-oracle/programs/tuktuk-gpt-oracle/: Cargo.toml
tuktuk-gpt-oracle/tests/: tuktuk-gpt-oracle.ts
tuktuk-whitelist-transfer-hook/: README.md
tuktuk-whitelist-transfer-hook/programs/whitelist-transfer-hook/: Cargo.toml
week-01-token-extensions-litesvm/whitelist-transfer-hook/: Anchor.toml  Notes.md
week-02-magicblock-tuktuk/: Readme.md
week-02-magicblock-tuktuk/magicblock-er-example/: Anchor.toml
whitelist-transfer-hook/: README.md
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
(+51 files in other folders)
