[package]
name = "anchor-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[dev-dependencies]
litesvm-token = "0.9.1"
litesvm = "0.9.1"

solana-instruction = "3.0.0"
solana-native-token = "2.2.1"
solana-pubkey = "2.2.1"
solana-sdk-ids = "2.2.1"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
solana-rpc-client = "3.0.3"

solana-account = "2.2.1"
spl-associated-token-account = "8.0.0"
solana-address = "2.1.0"
solana-keypair = "3.1.0"
solana-message = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = "3.0.0"
solana-transaction = "3.0"
# solana-clock = "~3.0"
